--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -11,3 +11,13 @@
     exact = true
     stripComponents = 1
     refreshPeriod = "168h"
+
+{{ if eq .chezmoi.os "windows" }}
+["AppData/Local/nvim-data/site/autoload/plug.vim"]
+{{ end }}
+{{ if ne .chezmoi.os "windows" }}
+[".local/share/nvim/site/autoload/plug.vim"]
+{{ end }}
+    type = "file"
+    url = "https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim"
+    refreshPeriod = "168h"
