--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -26,3 +26,8 @@
     type = "file"
     url = "https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim"
     refreshPeriod = "168h"
+
+[".vimrc"]
+    type = "file"
+    url = "https://raw.githubusercontent.com/simnalamburt/.dotfiles/main/.vimrc"
+    refreshPeriod = "168h"
