--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -19,3 +19,8 @@
     type = "file"
     url = "https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim"
     refreshPeriod = "168h"
+
+[".volta"]
+    type = "archive"
+    url = 'https://github.com/volta-cli/volta/releases/latest/download/volta-{{- output "curl" "https://volta.sh/latest-version" | trim -}}-{{ .volta.variant }}{{ .volta.ext }}'
+    refreshPeriod = "168h"
