--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -2,4 +2,9 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'IngoMeyer441/tmux-easy-motion'
 
+if-shell -b 'command -v fzf' {
+	set -g @plugin 'roosta/tmux-fuzzback'
+	set -g @plugin 'wfxr/tmux-fzf-url'
+}
+
 run '~/.tmux/plugins/tpm/tpm'
