--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -7,4 +7,8 @@ if-shell -b 'command -v fzf' {
 	set -g @plugin 'wfxr/tmux-fzf-url'
 }
 
+# Enable RGB colour if running in xterm(1)
+# https://stackoverflow.com/a/41786092/4154321
+set-option -sa terminal-overrides ",xterm*:Tc"
+
 run '~/.tmux/plugins/tpm/tpm'
