Update tmux.conf default terminal with color

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -10,6 +10,7 @@ if-shell -b 'command -v fzf' {
 # Enable RGB colour if running in xterm(1)
 # https://stackoverflow.com/a/41786092/4154321
 set-option -sa terminal-overrides ",xterm*:Tc"
+set -g default-terminal "screen-256color"
 
 if-shell -b '[ -e ~/.fig/tmux ]' source-file ~/.fig/tmux
 run '~/.tmux/plugins/tpm/tpm'
