Apply fig tmux intergration if available

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -11,4 +11,5 @@ if-shell -b 'command -v fzf' {
 # https://stackoverflow.com/a/41786092/4154321
 set-option -sa terminal-overrides ",xterm*:Tc"
 
+if-shell -b '[ -e ~/.fig/tmux ]' source-file ~/.fig/tmux
 run '~/.tmux/plugins/tpm/tpm'
