Add reload shortcut for tmux

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -13,4 +13,8 @@ set-option -sa terminal-overrides ",xterm*:Tc"
 set -g default-terminal "screen-256color"
 
 if-shell -b '[ -e ~/.fig/tmux ]' source-file ~/.fig/tmux
+
+unbind R
+bind R source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
+
 run '~/.tmux/plugins/tpm/tpm'
