--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -24,3 +24,16 @@
     type = "file"
     url = "https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim"
     refreshPeriod = "168h"
+
+{{ if eq .chezmoi.os "linux" }}
+[".local/share/fonts/neogdm.tff"]
+    type = "file"
+    url = "https://github.com/neodgm/neodgm/releases/latest/download/neodgm.ttf"
+    refreshPeriod = "168h"
+
+[".local/share/fonts/cascadia-code-nf"]
+    type = "archive"
+    url = "https://github.com/ryanoasis/nerd-fonts/releases/latest/download/CascadiaCode.zip"
+    exclude = ["Windows Compatible"]
+    refreshPeriod = "168h"
+{{ end }}
