Imporve zed config

--- a/dot_config/zed/settings.json
+++ b/dot_config/zed/settings.json
@@ -43,7 +43,12 @@
     },
     "terminal": {
         "shell": {
-            "program": "zsh"
+            "with_arguments": {
+                "program": "zsh",
+                "args": [
+                    "--login"
+                ]
+            }
         },
         "env": {
             "ZED": "1"
