--- a/dot_config/mise/config.toml
+++ b/dot_config/mise/config.toml
@@ -1,7 +1,7 @@
 [tools]
 node = '18'
 ruby = 'latest'
-python = { version='3.10', virtualenv='.venv' }
+python = '3.10'
 gleam = 'latest'
 elixir = '1.14'
 erlang = '25' # https://hexdocs.pm/elixir/1.14.4/compatibility-and-deprecations.html
