Enable mise experimental features

--- a/dot_config/mise/config.toml
+++ b/dot_config/mise/config.toml
@@ -27,3 +27,6 @@ raw = false         # set to true to directly pipe plugins to stdin/stdout/stder
 
 # shorthands_file = '~/.config/rtx/shorthands.toml' # path to the shorthands file, see `RTX_SHORTHANDS_FILE`
 disable_default_shorthands = false # disable the default shorthands, see `RTX_DISABLE_DEFAULT_SHORTHANDS`
+
+# Tasks and other experimentals
+experimental = true
