--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -10,14 +10,9 @@
     url = "https://github.com/tmux-plugins/tpm"
     refreshPeriod = "168h"
 
-{{ if eq .chezmoi.os "windows" }}
-["AppData/Local/nvim-data/site/autoload/plug.vim"]
-{{ end }}
-{{ if ne .chezmoi.os "windows" }}
-[".local/share/nvim/site/autoload/plug.vim"]
-{{ end }}
+[".config/bat/themes/Catppuccin Mocha.tmTheme"]
     type = "file"
-    url = "https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim"
+    url = "https://github.com/catppuccin/bat/raw/main/themes/Catppuccin%20Mocha.tmTheme"
     refreshPeriod = "168h"
 
 [".vim/autoload/plug.vim"]
