--- a/dot_config/mise/config.toml
+++ b/dot_config/mise/config.toml
@@ -13,9 +13,8 @@ usage = "0.3.0"
 [settings]
 # plugins can read the versions files used by other version managers (if enabled by the plugin)
 # for example, .nvmrc in the case of nodejs's nvm
-legacy_version_file = true         # enabled by default (different than asdf)
 
-# configure `rtx install` to always keep the downloaded archive
+# configure `mise install` to always keep the downloaded archive
 always_keep_download = true        # deleted after install by default
 
 # configure how frequently (in minutes) to fetch updated plugin repository changes
@@ -24,7 +23,6 @@ always_keep_download = true        # deleted after install by default
 plugin_autoupdate_last_check_duration = "7d" # (one week) set to 0 to disable updates
 
 verbose = false     # set to true to see full installation output, see `RTX_VERBOSE`
-asdf_compat = true # set to true to ensure .tool-versions will be compatible with asdf, see `RTX_ASDF_COMPAT`
 jobs = 4            # number of plugins or runtimes to install in parallel. The default is `4`.
 raw = false         # set to true to directly pipe plugins to stdin/stdout/stderr
 
