Enable quick terminal on Ghostty

--- a/dot_config/ghostty/config
+++ b/dot_config/ghostty/config
@@ -9,5 +9,8 @@ background-blur-radius = 20
 
 mouse-hide-while-typing = true
 
+# Ghostty has a weird name for backtick.
+keybind = global:cmd+grave_accent=toggle_quick_terminal
+
 # Local
 config-file = "config-local"
