Use uvx for managing pip-based tools

--- a/dot_config/mise/config.toml
+++ b/dot_config/mise/config.toml
@@ -34,3 +34,6 @@ experimental = true
 
 # python-build
 python_compile = true
+
+# prefer uv-based installation for pipx based packages
+pipx.uvx = true
