--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -25,6 +25,13 @@
     url = "https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim"
     refreshPeriod = "168h"
 
+[".config/lazyvim"]
+    type = "archive"
+    url = "https://github.com/LazyVim/starter/archive/main.tar.gz"
+    exact = true
+    stripComponents = 1
+    refreshPeriod = "168h"
+
 {{ if eq .chezmoi.os "linux" }}
 [".local/share/fonts/neogdm.tff"]
     type = "file"
