--- a/dot_config/lazygit/config.yml
+++ b/dot_config/lazygit/config.yml
@@ -2,23 +2,33 @@ gui:
   # https://github.com/catppuccin/lazygit/blob/main/themes/mocha/red.yml
   theme:
     activeBorderColor:
-      - '#f38ba8'
+      - "#f38ba8"
       - bold
     inactiveBorderColor:
-      - '#a6adc8'
+      - "#a6adc8"
     optionsTextColor:
-      - '#89b4fa'
+      - "#89b4fa"
     selectedLineBgColor:
-      - '#313244'
+      - "#313244"
     cherryPickedCommitBgColor:
-      - '#45475a'
+      - "#45475a"
     cherryPickedCommitFgColor:
-      - '#f38ba8'
+      - "#f38ba8"
     unstagedChangesColor:
-      - '#f38ba8'
+      - "#f38ba8"
     defaultFgColor:
-      - '#cdd6f4'
+      - "#cdd6f4"
     searchingActiveBorderColor:
-      - '#f9e2af'
+      - "#f9e2af"
   authorColors:
-    '*': '#b4befe'
+    "*": "#b4befe"
+git:
+  overrideGpg: true
+customCommands:
+  - key: r
+    context: files
+    prompts:
+      - type: input
+        title: commit message?
+        key: Message
+    command: 'git record -m "{{ .Form.Message }}"'
