justfile: improve nr with fzf

--- a/dot_config/just/justfile
+++ b/dot_config/just/justfile
@@ -39,7 +39,7 @@ curl-measure *ARGS:
 nr:
   #!/bin/bash
   COMMAND="$(command -v ny || command -v dum || echo "You should have krzkaczor/ny or egoist/dum installed!"; exit 1)"
-  SCRIPT="$(jq -cr '.scripts | keys_unsorted | .[]' package.json | gum filter)"
+  SCRIPT="$(jq -cr '.scripts | keys_unsorted | .[]' package.json | fzf --tac --height=~20 --preview 'jq --arg v {} -r '\''.scripts.[$v]'\'' package.json')"
   $COMMAND "$SCRIPT"
 
 [no-cd]
