justfile: add amp recipe with ablity to pick up mcps needed

--- a/dot_config/just/justfile
+++ b/dot_config/just/justfile
@@ -45,3 +45,6 @@ nr:
 [no-cd]
 todo:
   rg '(TODO|FIXME)(\([^)]+\))?:'
+
+amp *args:
+  amp --mcp-config "$(fd -g '*.json' .config/amp/mcps | fzf -m -d / --with-nth -1 --preview 'bat --color always --style plain -l json {}' | xargs jq -cs add)" {{args}}
